crates/nash-ir/src/propagate/snapshots/nash_ir__propagate__tests__repeated_bls_g1_constant_inlines.snap
---
source: crates/nash-ir/src/propagate/tests.rs
assertion_line: 199
expression: "snapshot(&b, core)"
---
--- core before
let literal#1 : bls_g1 = (con bls12_381_G1_element 0xc00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000) in
let alias#2 : bls_g1 = literal#1 in
bls12_381_G1_add alias#2 alias#2
--- core after
bls12_381_G1_add (con bls12_381_G1_element 0xc00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000) (con bls12_381_G1_element 0xc00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000)
