crates/nash-ir/src/propagate/snapshots/nash_ir__propagate__tests__repeated_bls_g2_constant_inlines.snap
---
source: crates/nash-ir/src/propagate/tests.rs
assertion_line: 210
expression: "snapshot(&b, core)"
---
--- core before
let literal#1 : bls_g2 = (con bls12_381_G2_element 0xc00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000) in
let alias#2 : bls_g2 = literal#1 in
bls12_381_G2_add alias#2 alias#2
--- core after
bls12_381_G2_add (con bls12_381_G2_element 0xc00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000) (con bls12_381_G2_element 0xc00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000)
