crates/nash-ir/src/propagate/snapshots/nash_ir__propagate__tests__repeated_bytes_above_limit_stay_shared.snap
---
source: crates/nash-ir/src/propagate/tests.rs
assertion_line: 188
expression: "snapshot(&b, core)"
---
--- core before
let literal#1 : bytes = (con bytestring #2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a) in
let alias#2 : bytes = literal#1 in
appendByteString alias#2 alias#2
--- core after
let literal#1 : bytes = (con bytestring #2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a2a) in
appendByteString literal#1 literal#1
