crates/nash-ir/src/propagate/snapshots/nash_ir__propagate__tests__repeated_integer_inlines_without_a_size_cap.snap
---
source: crates/nash-ir/src/propagate/tests.rs
assertion_line: 166
expression: "snapshot(&b, core)"
---
--- core before
let literal#1 : int = 123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890 in
let alias#2 : int = literal#1 in
addInteger alias#2 alias#2
--- core after
addInteger 123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890 123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890
